# my_camera_project_202603

./: .gitignore  README.md  partitions.csv
main/: CMakeLists.txt  app_main.c  camera.c  camera.h  http_server.c  http_server.h  mqtt.c  mqtt.h  sensor.c  sensor.h  tasks.h  wifi.c  wifi.h
